# heartbound

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
apps/: CMakeLists.txt
apps/dedicated_server/: CMakeLists.txt  main.cpp
apps/dev_game/: CMakeLists.txt  main.cpp
apps/render_benchmark/: CMakeLists.txt  main.cpp
apps/render_smoke/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/assemblies/: assembly.cpp  assembly.hpp  assembly_prototype.cpp  assembly_prototype.hpp
engine/assets/: asset_catalog.cpp  asset_catalog.hpp  asset_cooker.cpp  asset_cooker.hpp  cooked_asset_manifest.cpp  cooked_asset_manifest.hpp  cooked_asset_store.cpp  cooked_asset_store.hpp  resource_pack.cpp  resource_pack.hpp  virtual_file_system.cpp  virtual_file_system.hpp
engine/cargo/: cargo.cpp  cargo.hpp  cargo_prototype.cpp  cargo_prototype.hpp
engine/content/: content_validation.cpp  content_validation.hpp
engine/core/: assert.cpp  assert.hpp  file_io.cpp  file_io.hpp  filesystem.cpp  filesystem.hpp  hash.cpp  hash.hpp  ids.cpp  ids.hpp  logging.cpp  logging.hpp  process_entry.hpp  result.hpp
engine/debug/: debug_overlay.cpp  debug_overlay.hpp  inspection.cpp  inspection.hpp
engine/dirty/: dirty_region.cpp  dirty_region.hpp
engine/entities/: entity.cpp  entity.hpp  entity_id.hpp  entity_prototype.cpp  entity_prototype.hpp  entity_world.cpp  entity_world.hpp  physical_resource.cpp  physical_resource.hpp
engine/input/: input_action.cpp  input_action.hpp
engine/items/: item_prototype.cpp  item_prototype.hpp  item_stack.cpp  item_stack.hpp
engine/jobs/: job_system.cpp  job_system.hpp
engine/math/: matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
engine/modding/: flat_manifest.cpp  flat_manifest.hpp  generic_prototype.hpp  generic_prototype_loader.cpp  generic_prototype_loader.hpp  mod_diagnostic.hpp  mod_discovery.cpp  mod_discovery.hpp  mod_fingerprint.cpp  mod_fingerprint.hpp  mod_lifecycle.cpp  mod_lifecycle.hpp  mod_manifest.hpp  mod_validation.cpp  mod_validation.hpp  prototype_registry.cpp  prototype_registry.hpp  prototype_semantic_validation.cpp  prototype_semantic_validation.hpp
engine/movement/: carried_load.cpp  carried_load.hpp  character_collision.cpp  character_collision.hpp  controller_debug.cpp  controller_debug.hpp  movement_playground.cpp  movement_playground.hpp  movement_prediction.cpp  movement_prediction.hpp  player_camera.cpp  player_camera.hpp  player_controller.cpp  player_controller.hpp  player_controller_store.cpp  player_controller_store.hpp  player_input.cpp  player_input.hpp  remote_player_interpolation.cpp  remote_player_interpolation.hpp
engine/net/: client_session.cpp  client_session.hpp  command_payload.cpp  command_payload.hpp  host_session.cpp  host_session.hpp  replication.cpp  replication.hpp  server_command.cpp  server_command.hpp  transport.cpp  transport.hpp  transport_control.cpp  transport_control.hpp  transport_packet.cpp  transport_packet.hpp  transport_reliability.cpp  transport_reliability.hpp
engine/networks/: network_derivation.cpp  network_derivation.hpp  spatial_network.cpp  spatial_network.hpp
engine/physics/: physics_world.cpp  physics_world.hpp
engine/platform/: platform.cpp  platform.hpp
engine/player_profiles/: map_discovery.cpp  map_discovery.hpp  player_profile.cpp  player_profile.hpp
engine/processes/: process.cpp  process.hpp  process_environment.cpp  process_environment.hpp  process_prototype.cpp  process_prototype.hpp
engine/profiling/: cpu_timing.cpp  cpu_timing.hpp
engine/renderer/: render_camera.cpp  render_camera.hpp  renderer.cpp  renderer.hpp  renderer_config.hpp  renderer_stats.cpp  renderer_stats.hpp  world_render_list.cpp  world_render_list.hpp
engine/replay/: command_replay.cpp  command_replay.hpp
engine/rooms/: room_descriptor_prototype.cpp  room_descriptor_prototype.hpp  room_extraction.cpp  room_extraction.hpp  room_graph.cpp  room_graph.hpp
engine/save/: missing_prototype_recovery.cpp  missing_prototype_recovery.hpp  save_binary_codec.cpp  save_binary_codec.hpp  save_compatibility.cpp  save_compatibility.hpp  save_database.cpp  save_database.hpp  save_identity.hpp  save_metadata.cpp  save_metadata.hpp  save_migration.cpp  save_migration.hpp  save_slot.cpp  save_slot.hpp  save_snapshot.cpp  save_snapshot.hpp  save_text_codec.cpp  save_text_codec.hpp
engine/scenarios/: scenario.cpp  scenario.hpp  scenario_prototype.cpp  scenario_prototype.hpp
engine/scripting/: script_host_event.cpp  script_host_event.hpp  script_module_loader.cpp  script_module_loader.hpp  script_runtime.cpp  script_runtime.hpp
engine/server/: admin_service.cpp  admin_service.hpp  authoritative_server.cpp  authoritative_server.hpp
engine/server_logs/: server_log.cpp  server_log.hpp
engine/simulation/: fire.cpp  fire.hpp  fire_prototype.cpp  fire_prototype.hpp  fixed_step.cpp  (+8 more)
game/: CMakeLists.txt
samples/: CMakeLists.txt
tests/: CMakeLists.txt  assembly_v02_tests.cpp  asset_safety_tests.cpp  authoritative_server_v02_tests.cpp  chunk_mesh_scheduler_tests.cpp  coordinate_v02_tests.cpp  debug_renderer_tests.cpp  engine_tests.cpp  entity_world_tests.cpp  file_io_tests.cpp  filesystem_tests.cpp  game_runtime_tests.cpp  gameplay_input_tests.cpp  gpu_buffer_arena_tests.cpp  greedy_chunk_mesher_tests.cpp  headless_session_tests.cpp  infrastructure_v02_tests.cpp  lazy_process_fire_v02_tests.cpp  mesh_manager_tests.cpp  movement_controller_tests.cpp  platform_input_edge_tests.cpp  presentation_world_tests.cpp  process_entry_tests.cpp  region_storage_v02_tests.cpp  render_device_state_tests.cpp  render_milestone_tests.cpp  render_runtime_asset_tests.cpp  render_scene_tests.cpp  renderer_benchmark_tests.cpp  renderer_frontend_tests.cpp  replication_v02_tests.cpp  rich_blocks_v02_tests.cpp  runtime_spine_tests.cpp  save_recovery_v02_tests.cpp  server_foundations_v02_tests.cpp  simulation_runtime_tests.cpp  transport_integrity_tests.cpp  ui_renderer_tests.cpp  workpiece_v02_tests.cpp  world_integrity_v02_tests.cpp
tools/: CMakeLists.txt
(+312 files in other folders)
