add_subdirectory(platform_smoke)
add_subdirectory(renderer_smoke)
add_subdirectory(physics_sandbox)
add_subdirectory(network_sandbox)
add_subdirectory(scripting_sandbox)
add_subdirectory(jobs_sandbox)
add_subdirectory(math_sandbox)
add_subdirectory(mod_sandbox)
add_subdirectory(workpiece_sandbox)
add_subdirectory(chunk_sandbox)
add_subdirectory(room_sandbox)
add_subdirectory(world_state_sandbox)
