add_subdirectory(asset_cooker)
add_subdirectory(block_model_viewer)
add_subdirectory(chunk_inspector)
add_subdirectory(log_viewer)
add_subdirectory(map_profile_inspector)
add_subdirectory(mod_validator)
add_subdirectory(prototype_inspector)
add_subdirectory(replay_inspector)
add_subdirectory(save_inspector)
add_subdirectory(shader_compiler)
add_subdirectory(workpiece_inspector)
add_subdirectory(world_inspector)
