add_executable(heartstead_dev_game main.cpp)
target_link_libraries(heartstead_dev_game PRIVATE Heartstead::GameRuntime)
target_compile_definitions(
  heartstead_dev_game
  PRIVATE
    HEARTSTEAD_SOURCE_ROOT="${PROJECT_SOURCE_DIR}"
    HEARTSTEAD_DEV_GAME_ASSET_DIR="$<TARGET_FILE_DIR:heartstead_dev_game>/assets"
)
heartstead_configure_target(heartstead_dev_game)
heartstead_attach_terrain_shader_assets(heartstead_dev_game)
